# src-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  fragment.glsl  fragment3.glsl  main.cpp  vertex.glsl
includes/shader/: shader.cpp
libs/camera/: camera.cpp  camera.h
libs/shader/: shader.h
libs/valve/: bsp.cpp  bsp.h  bspstructs.h
shaders/: color.frag  fragment.glsl  fragment2.glsl  vertex.glsl  vertex.vert  vertexNoNormals.vert
